--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <h1>l'homme est un loup pour l'homme</h1>
+    <h1>L'HOMME EST UN LOUP POUR L'HOMME</h1>
+    <button>Tuez moi</button>
     
 </body>
 </html>
